--- a/package.json
+++ b/package.json
@@ -1,94 +1,97 @@
 {
-    "name": "beanconqueror",
-    "version": "1.3.1",
-    "author": "Lars Saalbach, Richard Polzin",
-    "homepage": "https://github.com/graphefruit/beanconqueror",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "beanconqueror",
+  "version": "1.3.1",
+  "author": "Lars Saalbach, Richard Polzin",
+  "homepage": "https://github.com/graphefruit/beanconqueror",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "config": {
+    "ionic_generate_source_map": false,
+    "ionic_sass": "./compile/sass.js"
+  },
+  "dependencies": {
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-permissions": "^4.9.0",
+    "@ionic-native/app-minimize": "^4.9.0",
+    "@ionic-native/app-version": "4.9.0",
+    "@ionic-native/core": "4.9.0",
+    "@ionic-native/file": "^4.11.0",
+    "@ionic-native/file-chooser": "^4.11.0",
+    "@ionic-native/file-path": "^4.11.0",
+    "@ionic-native/image-picker": "^4.9.0",
+    "@ionic-native/media-capture": "^4.9.0",
+    "@ionic-native/splash-screen": "4.9.0",
+    "@ionic-native/status-bar": "4.9.0",
+    "@ionic/storage": "^2.1.3",
+    "com.synconset.imagepicker": "^2.1.10",
+    "cordova-android": "6.2.3",
+    "cordova-browser": "5.0.3",
+    "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-appminimize": "^1.0.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-filepath": "^1.4.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-media-capture": "^1.4.3",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "^2.2.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.3",
+    "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "moment": "^2.22.2",
+    "rxjs": "5.5.11",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.26"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "^3.1.10",
+    "typescript": "~2.6.2"
+  },
+  "description": "App for Coffee Enthusiasts",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-appminimize": {},
+      "cordova-plugin-media-capture": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-app-version": {},
+      "com.synconset.imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Bitte um Freigabe"
+      },
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-allow-backup": {
+        "BACKUP": "true"
+      }
     },
-    "config": {
-        "ionic_generate_source_map": false,
-        "ionic_sass": "./compile/sass.js"
-    },
-    "dependencies": {
-        "@angular/common": "5.2.11",
-        "@angular/compiler": "5.2.11",
-        "@angular/compiler-cli": "5.2.11",
-        "@angular/core": "5.2.11",
-        "@angular/forms": "5.2.11",
-        "@angular/http": "5.2.11",
-        "@angular/platform-browser": "5.2.11",
-        "@angular/platform-browser-dynamic": "5.2.11",
-        "@ionic-native/android-permissions": "4.9.0",
-        "@ionic-native/app-minimize": "4.9.0",
-        "@ionic-native/app-version": "4.9.0",
-        "@ionic-native/core": "4.9.0",
-        "@ionic-native/file": "^4.11.0",
-        "@ionic-native/file-chooser": "^4.11.0",
-        "@ionic-native/file-path": "^4.11.0",
-        "@ionic-native/image-picker": "4.9.0",
-        "@ionic-native/media-capture": "4.9.0",
-        "@ionic-native/splash-screen": "4.9.0",
-        "@ionic-native/status-bar": "4.9.0",
-        "@ionic/storage": "2.1.3",
-        "com.synconset.imagepicker": "^2.1.10",
-        "cordova-android": "6.2.3",
-        "cordova-browser": "5.0.3",
-        "cordova-plugin-android-permissions": "^1.0.0",
-        "cordova-plugin-app-version": "^0.1.9",
-        "cordova-plugin-appminimize": "^1.0.0",
-        "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-device": "^1.1.7",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-filechooser": "^1.0.1",
-        "cordova-plugin-filepath": "^1.4.2",
-        "cordova-plugin-ionic-webview": "^1.2.1",
-        "cordova-plugin-media-capture": "^1.4.3",
-        "cordova-plugin-splashscreen": "^4.1.0",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-telerik-imagepicker": "^2.1.8",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "cordova-sqlite-storage": "^2.3.3",
-        "ionic-angular": "3.9.2",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "moment": "^2.19.1",
-        "rxjs": "5.5.11",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.26"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "^3.1.10",
-        "typescript": "~2.6.2"
-    },
-    "description": "App for Coffee Enthusiasts",
-    "cordova": {
-        "plugins": {
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-appminimize": {},
-            "cordova-plugin-media-capture": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-android-permissions": {},
-            "cordova-plugin-app-version": {},
-            "com.synconset.imagepicker": {
-                "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Bitte um Freigabe"
-            },
-            "cordova-plugin-filechooser": {},
-            "cordova-plugin-filepath": {},
-            "cordova-plugin-file": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
